<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.LoginActivity"
    android:background="@drawable/img_bg_login">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="vertical">
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="2"
      android:gravity="center"
      android:orientation="vertical">
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:gravity="center"
          android:layout_gravity="center">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="HỆ THỐNG\n QUẢN LÝ NHÀ NGHỈ"
            android:gravity="center"
            android:drawableTop="@drawable/ic_hotel_logo"
            android:layout_gravity="center"
            android:textColor="@color/md_white"
            android:fontFamily="@font/fontbold"
            android:textSize="@dimen/_25sdp"
            android:alpha="0.8"/>
      </LinearLayout>
  </LinearLayout>
  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="3"
      android:gravity="center"
      android:orientation="vertical">
    <LinearLayout
        android:id="@+id/text_input_number_phone"
        android:layout_width="match_parent"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_gravity="center"
        android:layout_height="@dimen/_40sdp"
        android:background="@drawable/custom_border_backgroud_white"
        android:alpha="0.8">
      <ImageView
          android:layout_marginLeft="@dimen/_5sdp"
          android:layout_gravity="center"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_login_phone"/>

      <EditText
          android:id="@+id/edt_number_phone"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_40sdp"
          android:layout_marginLeft="12dp"
          android:layout_marginRight="12dp"
          android:layout_gravity="center"
          android:fontFamily="@font/fontbold"
          android:hint="@string/str_nhap_so_di_dong"
          android:background="@null"
          android:inputType="text"
          android:text="admin"
          android:textCursorDrawable="@color/colorPrimaryDark"
          android:textColor="@color/md_grey_800"
          android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/text_in_put_pass_word"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:layout_gravity="center"
        android:background="@drawable/custom_border_backgroud_white"
        android:alpha="0.8">

      <ImageView
          android:layout_marginLeft="@dimen/_5sdp"
          android:layout_gravity="center"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_login_password"/>

      <EditText
          android:id="@+id/txt_pass_word"
          android:layout_width="match_parent"
          android:layout_height="@dimen/_40sdp"
          android:layout_marginLeft="12dp"
          android:layout_marginRight="12dp"
          android:fontFamily="@font/fontbold"
          android:layout_gravity="center"
          android:background="@null"
          android:hint="@string/str_nhap_mat_khau"
          android:inputType="textPassword"
          android:text="123456"
          android:textCursorDrawable="@color/colorPrimaryDark"
          android:textColor="@color/md_grey_800"
          android:textSize="16sp" />
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/btn_dang_nhap"
        android:text="@string/str_dang_nhap"
        android:textColor="@color/md_white"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="@font/fontbold"
        android:background="@drawable/custom_btn_backgroud_blue"
        android:alpha="0.8"/>

    <Button
      android:layout_width="match_parent"
      android:layout_height="@dimen/_40sdp"
      android:layout_marginLeft="@dimen/_25sdp"
      android:layout_marginRight="@dimen/_25sdp"
      android:layout_marginTop="@dimen/_5sdp"
      android:id="@+id/btnForgotPassword"
      android:text="@string/str_quen_mat_khau"
      android:textColor="@color/colorPrimaryDark"
      android:textSize="@dimen/_16sdp"
      android:fontFamily="@font/fontbold"
      android:background="@drawable/custom_border_backgroud_white"
      android:alpha="0.6"/>
  </LinearLayout>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1.5"
      android:orientation="horizontal"
      android:gravity="center"
      android:layout_alignParentBottom="true"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true">
    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:id="@+id/btnRegister"
        android:text="@string/str_dang_ky_hotel"
        android:textColor="@color/md_white"
        android:textSize="@dimen/_16sdp"
        android:fontFamily="@font/fontbold"
        android:background="@drawable/custom_btn_no_backgroud_blue"
        android:alpha="0.8"/>
  </LinearLayout>
  </LinearLayout>
</LinearLayout>
