<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.vnpt.hotel.manager.ui.fragment.ListBookRoomFragment"
    android:layout_margin="2dp"
    android:background="@color/md_grey_200">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:gravity="center"
      android:background="@drawable/primary_layout_bg"
      android:padding="@dimen/_6sdp"
      android:visibility="gone"
      android:id="@+id/viewSearch">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:layout_marginBottom="@dimen/_6sdp"
        android:orientation="horizontal">
      <ImageView
          android:id="@+id/btnDate"
          android:layout_marginLeft="5dp"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:src="@drawable/ic_calendar3"
          android:gravity="center"
          android:layout_marginRight="4dp"
          android:layout_gravity="center"/>
      <LinearLayout
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:layout_marginRight="5dp"
          android:layout_gravity="center"
          android:gravity="center">
        <TextView
            android:id="@+id/txtFromDate"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:hint="@string/tuNgay"
            android:textStyle="bold"
            android:textColor="@color/md_blue_800"
            android:textColorHint="@color/md_grey_800"
            android:background="@drawable/edittext_bg"
            android:gravity="center"
            android:textSize="@dimen/_12sdp"
            android:layout_gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:text="-"
            android:textSize="25dp"
            android:textColor="@color/md_blue_800"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_gravity="center"/>
        <TextView
            android:id="@+id/txtToDate"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_weight="1"
            android:hint="Đến ngày"
            android:textStyle="bold"
            android:textSize="@dimen/_12sdp"
            android:textColor="@color/md_blue_800"
            android:background="@drawable/edittext_bg"
            android:textColorHint="@color/md_grey_800"

            android:gravity="center"
            android:layout_gravity="center"/>
      </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="@dimen/_100sdp"
            android:layout_height="@dimen/_30sdp"
            android:background="@drawable/bg_button_blue_700"
            android:layout_marginRight="@dimen/_10sdp"
            android:id="@+id/btnSearch"
            android:textColor="@color/md_white"
            android:textSize="@dimen/_12sdp"
            android:layout_gravity="center"
            android:text="@string/timKiem"/>
      <Button
          android:layout_width="@dimen/_100sdp"
          android:layout_height="@dimen/_30sdp"
          android:background="@drawable/bg_button_blue_700"
          android:id="@+id/btnCancel"
          android:textColor="@color/md_white"
          android:textSize="@dimen/_12sdp"
          android:layout_gravity="center"
          android:text="@string/huy"/>
    </LinearLayout>
  </LinearLayout>


  <android.support.v7.widget.RecyclerView
      android:id="@+id/recycler_view_book_room"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/viewSearch"
      android:scrollbars="vertical" />

  <ProgressBar
      android:id="@+id/progressBarLoadMore"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_centerHorizontal="true"
      android:visibility="gone"
      android:layout_gravity="center_horizontal" />
  <TextView
      android:id="@+id/tv_no_data"
      android:layout_gravity="center"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:textSize="@dimen/_20ssp"
      android:drawableTop="@drawable/ic_empty"
      android:text="@string/noData"
      android:textColor="@color/md_black"
      android:layout_centerInParent="true"
      android:fontFamily="@font/font_normal" />
</RelativeLayout>
